# omogenexec

./: .gitignore  BUILD.bazel  Cargo.toml  README.md  WORKSPACE  go.mod  go.sum
api/: BUILD.bazel  eval.proto  language.proto  program.proto  run_service.proto
cargo/: BUILD.bazel  crates.bzl
cargo/remote/: BUILD.atty-0.2.14.bazel  BUILD.bitflags-0.4.0.bazel  BUILD.bitmask-0.5.0.bazel  BUILD.cgroups-rs-0.2.6.bazel  BUILD.clap-3.0.0-beta.2.bazel  BUILD.clap_derive-3.0.0-beta.2.bazel  BUILD.err-derive-0.2.4.bazel  BUILD.indexmap-1.7.0.bazel  BUILD.libc-0.2.97.bazel  BUILD.memchr-2.4.0.bazel  BUILD.nix-0.20.0.bazel  BUILD.nix-0.7.0.bazel  BUILD.os_str_bytes-2.4.0.bazel  BUILD.partition-identity-0.2.8.bazel  BUILD.proc-mounts-0.2.4.bazel  BUILD.rustc_version-0.1.7.bazel  BUILD.semver-0.1.20.bazel  BUILD.strsim-0.10.0.bazel  BUILD.syn-1.0.73.bazel  BUILD.synstructure-0.12.4.bazel  BUILD.syscalls-0.3.3.bazel  BUILD.termcolor-1.1.2.bazel  BUILD.textwrap-0.12.1.bazel  BUILD.void-1.0.2.bazel  BUILD.winapi-0.3.9.bazel  BUILD.winapi-util-0.1.5.bazel
deb/sandbox/: BUILD.bazel  postinst  postrm
deploy/: push-release.sh
eval/: BUILD.bazel  compilers.go  diff.go  diff_test.go  eval.go  filelinker.go  fs.go  language.go  runnable.go  sandbox.go
judgehost/: BUILD.bazel  compilers.go  diff.go  diff_test.go  eval.go  filelinker.go  language.go  main.go  runnable.go  sandbox.go
judgehost/eval/: BUILD.bazel  compilers.go  diff.go  eval.go  language.go  sandbox.go
judgehost/required_files/: BUILD.bazel
packaging/: build-omogenexec.sh
permissionfixer/: BUILD.bazel
permissionfixer/src/: main.rs
runner/: BUILD.bazel  diff.go  diff_test.go  filelinker.go  sandbox.go
runner/diff/: BUILD.bazel  diff.go  diff_test.go
runner/runner_test/: BUILD.bazel  main.go
runner/src/: chroot.rs  libc_bindings.rs  sandbox.rs
sandbox/: BUILD.bazel
sandbox/src/: chroot.rs  libc_bindings.rs  main.rs  quota.rs  sandbox.rs
util/: BUILD.bazel  commands.go  files.go  strings.go  users.go
