[package]
name = "compile_with_bazel"
version = "0.0.0"

# Mandatory (or Cargo tooling is unhappy)
[lib]
path = "fake_lib.rs"

[dependencies]
libc = "0.2"
bitmask = "0.5"
clap = "3.0.0-beta.2"
proc-mounts = "0.2.2"
syscalls = "0.3.3"
cgroups-rs = "0.2.6"
nix = "0.7.0"

[package.metadata.raze]
workspace_path = "//cargo"
package_aliases_dir = "cargo"

targets = [
    "x86_64-unknown-linux-gnu",
]

genmode = "Remote"
