load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "omogen_runner_proto",
    srcs = [
        "eval.proto",
        "language.proto",
        "program.proto",
    ],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "omogen_runner_go_proto",
    importpath = "github.com/jsannemo/omogenexec/api",
    proto = ":omogen_runner_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "api",
    embed = [":omogen_runner_go_proto"],
    importpath = "github.com/jsannemo/omogenexec/api",
    visibility = ["//visibility:public"],
)
