load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "judgehost_lib",
    srcs = ["main.go"],
    importpath = "github.com/jsannemo/omogenexec/judgehost",
    visibility = ["//visibility:private"],
    deps = [
        "//api",
        "//judgehost/eval",
        "@com_github_google_logger//:logger",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "judgehost",
    embed = [":judgehost_lib"],
    visibility = ["//visibility:public"],
)
