load("@rules_rust//rust:rust.bzl", "rust_binary")

rust_binary(
    name = "omogenexec",
    srcs = [
        "src/chroot.rs",
        "src/libc_bindings.rs",
        "src/main.rs",
        "src/quota.rs",
        "src/sandbox.rs",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//cargo:bitmask",
        "//cargo:cgroups_rs",
        "//cargo:clap",
        "//cargo:libc",
        "//cargo:nix",
        "//cargo:proc_mounts",
        "//cargo:syscalls",
    ],
)
