load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "util",
    srcs = [
        "commands.go",
        "files.go",
        "strings.go",
        "users.go",
    ],
    importpath = "github.com/jsannemo/omogenexec/util",
    visibility = ["//visibility:public"],
    deps = ["@com_github_google_logger//:logger"],
)
