load("@rules_pkg//:pkg.bzl", "pkg_deb", "pkg_tar")

pkg_tar(
    name = "omogenexec-bin",
    srcs = ["//sandbox:omogenexec"],
    mode = "0755",
    package_dir = "/usr/bin",
    strip_prefix = "/sandbox",
)

pkg_tar(
    name = "omogenexec-permissions-bin",
    srcs = ["//permissionfixer:omogenexec-fixpermissions"],
    mode = "0755",
    package_dir = "/usr/bin",
    strip_prefix = "/permissionfixer",
)

pkg_tar(
    name = "omogenexec-fs",
    srcs = [
        "@omogenfs-cpp//file",
        "@omogenfs-csharp//file",
        "@omogenfs-go//file",
        "@omogenfs-java//file",
        "@omogenfs-python3//file",
        "@omogenfs-ruby//file",
        "@omogenfs-rust//file",
    ],
    mode = "0644",
    package_dir = "/var/lib/omogen/fs/"
)

pkg_tar(
    name = "debian-data",
    extension = "tar.gz",
    deps = [
        ":omogenexec-fs",
        ":omogenexec-bin",
        ":omogenexec-permissions-bin",
    ],
)

pkg_deb(
    name = "omogenexec-debian",
    architecture = "amd64",
    data = ":debian-data",
    depends = [
        "quota",
    ],
    description = "A small process sandbox",
    maintainer = "Johan Sannemo <johan.sannemo@kodsport.se>",
    package = "omogenexec",
    postinst = "postinst",
    postrm = "postrm",
    version = "1.3.0",
)
