load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "eval",
    srcs = [
        "compilers.go",
        "diff.go",
        "eval.go",
        "filelinker.go",
        "language.go",
        "runnable.go",
        "sandbox.go",
    ],
    importpath = "github.com/jsannemo/omogenexec/judgehost/eval",
    visibility = ["//visibility:public"],
    deps = [
        "//api",
        "//util",
        "@com_github_google_logger//:logger",
    ],
)

go_test(
    name = "eval_test",
    srcs = ["diff_test.go"],
    embed = [":eval"],
)
