load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "diff",
    srcs = ["diff.go"],
    importpath = "github.com/jsannemo/omogenexec/runner/diff",
    visibility = ["//visibility:public"],
    deps = ["@com_github_google_logger//:logger"],
)

go_test(
    name = "diff_test",
    srcs = ["diff_test.go"],
    embed = [":diff"],
)
